client/src/routes/Modification/modification.module.scss
.container {
  display: flex;
  justify-content: center;
  background-color: #414042;
  height: 80vh;
  padding: 100px;
}

.card {
  display: flex;
  gap: 50px;
  background-color: white;
  padding: 15px;
  height: 600px;
  overflow-y: scroll;
}

#move {
  position: relative;
  right: 10px;
}

.form__container {
  display: flex;
  flex-direction: column;
  gap: 35px;
}

.image__container {
  height: 520px;

  img {
    width: 100%;
    height: 100%;
  }
}

.information__panel {
  position: relative;
  top: 50px;
  height: 800px;
  padding-bottom: 35px;

  .name {
    font-size: 24px;
    font-weight: bold;
    margin-bottom: 10px;
  }

  .price {
    font-weight: bold;
    font-size: 18px;
    margin-bottom: 15px;
  }

  .restriction {
    margin-bottom: 25px;
    font-weight: 500;
    color: rgb(225, 0, 0);
  }

  .color__selector {
    display: flex;
    gap: 15px;
  }
}

.selected {
  outline: 4px solid rgb(251, 251, 6);
}

.size__selector {
  margin-bottom: 25px;
}

.color__title {
  margin-bottom: 10px;
  font-size: 18px;
  font-weight: 500;
}

.color__block {
  height: 32px;
  width: 38px;
  cursor: pointer;
  border: 1px solid grey;
}

.checkout__container {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #f3c313;
  width: 135px;
  height: 30px;
  margin-top: 15px;
  border-radius: 15px;
  cursor: pointer;

  p {
    font-size: 16px;
    position: relative;
    bottom: 1px;
    font-weight: 500;
  }
}

.Black {
  background-color: black;
}

.Grey {
  background-color: #8b8c8f;
}

.Red {
  background-color: #eb4034;
}

.Royal { 
  background-color: #09399e
}

.Blue {
  background-color: #0653cf
}

.Anthracite {
  background-color: #6c6d70
}

.Green { 
  background-color: #025225
}

.Concrete {
  background-color: #9da6b0
}

.Navy {
  background-color: #00265e
}

.Brown {
  background-color: #964B00
}

table {
  input {
    width: 100%;
  }
}

td {
  width: 50px;
}

th {
  text-align: right;
  width: 75px;
}

